<resources>
    <string name="app_name">BrowseAss</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="goto_web">GO</string>
    <string name="header_hint_refresh_normal">Drag to Refresh</string>
    <string name="header_hint_refresh_ready">Get More</string>
    <string name="header_hint_refresh_loading">Loading...;</string>
    <string name="header_hint_refresh_time">Time:</string>
    <string name="footer_hint_load_normal">Load More</string>
    <string name="footer_hint_load_ready">Get More</string>
    <string name="no_videos">No more contents, start taking clips now!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect_web_page">Collect</string>
    <string name="collect_book">Collect Book</string>
    <string name="history_scan">History Scan</string>
    <string name="weather">Weather</string>
    <string name="third_login">Third Login</string>
    <string name="login">Login</string>
    <string name="login_text">因为种种原因我们只支持QQ登录，求求您了，点击下面登录吧!</string>
    <string name="news">NEWS</string>
    <string name="exit">Exit</string>
    <string name="share">Share</string>
    <string name="del_history">Del History</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_news_list">NewsItem</string>
    <string name="title_news_detail">News Detail</string>
    <string name="today_news">今日头条</string>
    <string name="society_text">社会</string>
    <string name="domestic_text">国内</string>
    <string name="international_text">国际</string>
    <string name="entertainment_text">娱乐</string>
    <string name="sports_text">体育</string>
    <string name="military_text">军事</string>
    <string name="science_text">科技</string>
    <string name="finance_text">财经</string>
    <string name="fashion_text">时尚</string>
    <string name="delete_bookmark">确定删除这个书签吗？</string>
    <string name="calendar">Calendar</string>
</resources>
