<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/weatherMenu"
            android:icon="@drawable/weather"
            android:title="@string/weather" />
        <item
            android:id="@+id/newsMenu"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/calendarMenu"
            android:icon="@drawable/calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/deleteHistoryMenu"
            android:icon="@drawable/clear"
            android:title="@string/del_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/shareMenu"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/exitMenu"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
