<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/today_news"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_20" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/titleLayout"
        android:orientation="vertical">
        <Button
            android:id="@+id/society"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/textSize_18"
            android:text="@string/society_text"/>
        <Button
            android:id="@+id/domestic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/textSize_18"
            android:text="@string/domestic_text"/>
        <Button
            android:id="@+id/international"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/textSize_18"
            android:text="@string/international_text"/>
        <Button
            android:id="@+id/entertainment"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/textSize_18"
            android:text="@string/entertainment_text"/>
        <Button
            android:id="@+id/sports"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize_18"
            android:gravity="center"
            android:text="@string/sports_text"/>
        <Button
            android:id="@+id/military"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/textSize_18"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/military_text"/>
        <Button
            android:id="@+id/science"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize_18"
            android:gravity="center"
            android:text="@string/science_text"/>
        <Button
            android:id="@+id/finance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize_18"
            android:gravity="center"
            android:text="@string/finance_text"/>
        <Button
            android:id="@+id/fashion"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/textSize_18"
            android:gravity="center"
            android:text="@string/fashion_text"/>

    </LinearLayout>>
</RelativeLayout>
